# fcvae-anomaly-detection

./: .gitignore  README.md  TECHNICAL.md  docker-compose.yml
app/: Dockerfile  base_detector.py  evaluate_fcvae.py  fcvae_model.py  fcvae_registry.py  fcvae_scorer.py  fcvae_streaming_detector.py  main.py  pyproject.toml  train_fcvae.py
data/: generate_transactions.py
models/fcvae/: oracle_thresholds.json  registry_config.pkl
models/fcvae/Accel_CMP/: history.pkl  model.pt  scorer.pkl
models/fcvae/Accel_nopin/: history.pkl  model.pt  scorer.pkl
models/fcvae/Star_CMP/: history.pkl  model.pt  scorer.pkl
models/fcvae/Star_nopin/: history.pkl  model.pt  scorer.pkl
producer/: producer.py
