[project]
name = "fcvae-anomaly-detection"
version = "1.0.0"
description = "FCVAE-based real-time anomaly detection with Kafka/Spark streaming and Dash visualization"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "pyspark==3.5.3",
    "confluent-kafka>=2.3.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
]
